CLI 프로그램 만드는 중 - 로그인기능 필요성.(기능 구현하는 중)